fix templates with not enough brackets

--- a/skel/.mrbob.ini
+++ b/skel/.mrbob.ini
@@ -12,7 +12,7 @@ siteauthor.default = Site Administrator
 
 url.question = What is the URL of the website (no http://)?
 url.required = True
-url.default = http://example.com
+url.default = example.com
 
 ssh_user.question = What is the SSH username for uploading via rsync?
 ssh_user.required = True
